--- a/source/stylesheets/main.styl
+++ b/source/stylesheets/main.styl
@@ -1,7 +1,7 @@
 // Configure your gradient here!
 // bgLeft and bgRight are the left and right colors of the Jumbotron gradient.
-bgLeft = #00a86a
-bgRight = #6f5498
+bgLeft = #6f5498
+bgRight = #FC60A8
 
 footerHeight = 20px
 
