--- a/templates/index.pug
+++ b/templates/index.pug
@@ -8,7 +8,7 @@ block head
   
   - var baseurl = 'https://your-api-here.com/api/'
   - var github = 'https://github.com/vivshaw/whizbang'
-  - var octocatColors = ['#fff', '#6f5499']
+  - var octocatColors = ['#fff', '#FC60A8']
   
   title API landing page template
 
