Rewrite landing page

--- a/source/stylesheets/main.styl
+++ b/source/stylesheets/main.styl
@@ -23,6 +23,14 @@ footerHeight = 20px
 #query
     margin-right 15px
     margin-left 15px
+    
+.btn-primary.themed
+    background-color bgLeft !important
+    border-color bgLeft !important
+
+.btn-secondary.themed
+    background-color bgRight !important
+    border-color bgRight !important
 
 html
     position relative
