--- a/templates/index.pug
+++ b/templates/index.pug
@@ -10,35 +10,24 @@ block head
   - var github = 'https://github.com/vivshaw/whizbang'
   - var octocatColors = ['#fff', '#FC60A8']
   
-  title API landing page template
+  title whoami
 
 block jumbotron
   //- Bootstrap jumbotron content goes in here.
   //- If you want to configure the background gradient colors, head over to
   //- source/stylesheets/main.styl
   
-  h1.display-3 Whizbang: chrome up your API
+  h1.display-3 whoami API
   p
-    | This is a landing page template for Node + Express APIs. The design priority
-    | is to give the user a responsive landing page with a quick rundown of what the API is and how it works, a link to
-    | the project GitHub, and a form to try it out. The dev workflow priority is to make
-    | a quick minimal-config solution so you can drop it in, forget it, and focus on actually writing your sweet new Express API.
-    | It's as easy as "git clone", "npm install" & editing one pug template, it has built-in automation with npm scripts,
-    | and it's even Heroku-ready. Built with 
-    a(href='https://pugjs.org') Pug
-    | , 
-    a(href='http://stylus-lang.com') Stylus
-    | , 
-    a(href='https://v4-alpha.getbootstrap.com') Bootstrap 4
-    | , & 
-    a(href='https://www.npmjs.com') npm
-    |  for all-killer no-filler workflow magic.
+    | Who are you? I really wanna know!
   p
-    | Inspired by
+    | This is a whoami API built for a
     a(href = 'https://www.freecodecamp.com/') 
       i.fa.fa-free-code-camp
-      |  FreeCodeCamp's
-    |  API development challenges.
+      |  FreeCodeCamp
+    |  API development challenge. It accepts queries at 
+    a(href='/whoami/') /whoami/
+    | , and returns a JSON object containing your OS, language, and IP address.
 
 block content
   //- Page content goes in here.
@@ -51,66 +40,17 @@ block content
         .col-md-6
           h2 Example usage:
           p
-            code #{baseurl}query-goes-here
+            code #{baseurl}
             
           h2 Example output:
           p
-            code { "example": 1488501712, "data": "March 1, 2017" }
+            code {"os":"Windows NT 10.0; Win64; x64","language":"en-US","ip":"65.183.152.45"}
             
           h2 Try it!
-          p Describe query here, then edit the form to submit it properly.
-          form(method='GET' action=baseurl)
-            label(for=query) Query: 
-            input(type='text' name='query' id='query')
-            button.btn.btn-primary Submit
+          a.btn.btn-primary.themed(href='/whoami/') Who am I?
+          
             
         .col-md-6
-          h2 It's this easy:
-      
-          ol
-            li
-              p
-                kbd git clone https://github.com/vivshaw/whizbang
-                br
-                kbd cd whizbang/
-                br
-                kbd npm install
-                br
-                kbd npm run watch
-                  
-            li
-              p
-                | Edit
-                code templates/index.pug
-                |  to configure your vars and write your content (in Bootstrap).
-                code baseurl
-                |  is your API's base url, 
-                code github
-                |  is your API's github repository, and
-                code octocatColors
-                |  are the background and foreground colors of the 
-                a(href='http://tholman.com/github-corners/') tholman
-                | -style GitHub corner.
-            
-            li
-              p
-                | Edit
-                code stylesheets/main.styl
-                |  to configure the jumbotron gradient colors with the vars
-                code bgLeft
-                |  and
-                code bgRight
-            
-            li
-              p
-                | Write your API! All changes will refresh live with 
-                a(href='https://nodemon.io/') nodemon
-                | . 
-                
-            p
-              | For Heroku deployment & other details, 
-              a(href='https://github.com/vivshaw/whizbang/blob/master/README.md') consult the docs
-              | .
+          h2 User story:
+          h4.display-4 I can get the IP address, language and operating system for my browser.
           
-block scripts
-  //- Any js scripts you need at the end of the page go here!
