--- a/views/index.jade
+++ b/views/index.jade
@@ -1,10 +1,11 @@
-doctype html
-html
-  head
-    meta(charset='utf-8')
-  body
-    h1 Who are you?
-    p Wanna Know? 
-    p type whoami at the end of address. like
-    p(style="font-size: 40px; color: red")  https://tiny-chatter.glitch.me/whoami
+h1 Url Shortner
 
+
+h4 Put long adress at the end of current address like this.
+p https://url-shortener12.glitch.me/
+ a(style="color:blue") developers.rebrandly.com
+ 
+br
+
+h4 Result
+p https://goo.gl/mYDrQi
